[package]
name = "network_scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] } # For asynchronous networking
pnet = "0.27.2" # For low-level networking
ipnetwork = "0.18.0" # For working with IP addresses and networks